upgraded marlin-0.5A (better buckets arrays handling) + added insane & ref tests and diff images (ductus vs marlin)