@@ -3,7 +3,9 @@
 source ./env.sh
 
 # server jvm 
-JAVA_OPTS="-server -XX:+PrintCommandLineFlags -XX:+PrintFlagsFinal"
+JAVA_OPTS="-server"
+# -XX:+PrintCommandLineFlags -XX:+PrintFlagsFinal"
+
 # headless mode
 #JAVA_OPTS="-server -Djava.awt.headless=true -XX:+PrintCommandLineFlags -XX:+PrintFlagsFinal"
 #JAVA_OPTS="-XX:+PrintCommandLineFlags -XX:+PrintFlagsFinal"
@@ -12,7 +14,11 @@ JAVA_OPTS="-server -XX:+PrintCommandLineFlags -XX:+PrintFlagsFinal"
 #JAVA_TUNING=" -Xms128m  -Xmx128m -XX:+TieredCompilation"
 #JAVA_TUNING=" -Xms128m  -Xmx128m -XX:+AggressiveOpts -XX:CompileThreshold=1000"
 
-JAVA_TUNING=" -Xms2048m  -Xmx2048m -XX:+UseConcMarkSweepGC"
+#JAVA_TUNING=" -Xms2048m  -Xmx2048m -XX:+UseConcMarkSweepGC"
+JAVA_TUNING=" -Xms2048m  -Xmx2048m -XX:+UseG1GC -XX:MaxGCPauseMillis=100 -XX:InitiatingHeapOccupancyPercent=60"
+# -verbose:gc"
+
+# "-XX:+UseParNewGC -XX:+CMSParallelRemarkEnabled"
 #JAVA_TUNING=" -Xms2048m  -Xmx2048m -ea -XX:+AggressiveOpts -XX:+UseConcMarkSweepGC"
 
 # MapBench:
@@ -20,8 +26,10 @@ CLASSPATH=$MAP_BENCH_JAR
 
 BOOTCLASSPATH=""
 
-echo "CP:      $CLASSPATH"
-echo "Boot CP: $BOOTCLASSPATH"
+echo "CLASSPATH:   $CLASSPATH"
+echo "Boot CP:     $BOOTCLASSPATH"
+echo "Java Opts:   $JAVA_OPTS"
+echo "Java tuning: $JAVA_TUNING"
 
 echo "JVM path"
 which java
